can run code to display webpage, see #17

--- a/eui_UI/templates/alert.html
+++ b/eui_UI/templates/alert.html
@@ -17,13 +17,13 @@
 <body>
     <nav class="navbar navbar-light navbar-expand-md navigation-clean">
         <div class="container"><a class="navbar-brand" href="#">Eui For You</a>
-            <div class="collapse navbar-collapse" id="navcol-1">
+            <div class="collapse navbar-collapse" id="navcol-2">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pomodoro.html">Pomodoro</a></li>
-                    <li class="nav-item"><a class="nav-link" href="alert.html">Alerts</a></li>
-                    <li class="nav-item"><a class="nav-link" href="statistic.html">Statistics</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact_us.html">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/pomodoro">Pomodoro</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/alert">Alerts</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/statistic">Statistics</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/contact_us">Contact Us</a></li>
                 </ul>
             </div>
         </div>
