--- a/eui_UI/templates/pomodoro.html
+++ b/eui_UI/templates/pomodoro.html
@@ -119,10 +119,8 @@
                 $('input[name="workOptions"]').each(function(ind, option){
                     if (localStorage.getItem(option.value)==null){
                         notFound += 1;
-                        console.log("not selected...");
                     }
                     $("#"+option.value).prop("checked", localStorage.getItem(option.value)==="true");
-                    // console.log(option); // for testing
                 });
 
                 if (notFound == 3){ // if none of the workOptions are selected, set default to the first option
@@ -132,12 +130,10 @@
                 notFound = 0;
 
                 $('input[name="restOptions"]').each(function(ind, option){
-                    if (localStorage.getItem(option.value)==="false"){
+                    if (localStorage.getItem(option.value)==null){
                         notFound += 1;
-                        console.log("not selected...");
                     }
                     $("#"+option.value).prop("checked", localStorage.getItem(option.value)==="true");
-                    // console.log(option); // for testing
                 });
 
                 if (notFound == 3){ // if none of the restOptions are selected, set default to the first option
