--- a/eui_UI/templates/statistic.html
+++ b/eui_UI/templates/statistic.html
@@ -34,7 +34,10 @@
         <div><canvas data-bss-chart="{&quot;type&quot;:&quot;horizontalBar&quot;,&quot;data&quot;:{&quot;labels&quot;:[&quot;Monday&quot;,&quot;Tuesday&quot;,&quot;Wednesday&quot;,&quot;Thursday&quot;,&quot;Friday&quot;,&quot;Saturday&quot;,&quot;Sunday&quot;],&quot;datasets&quot;:[{&quot;label&quot;:&quot;Number of completed Pomodoros&quot;,&quot;backgroundColor&quot;:&quot;#4e73df&quot;,&quot;borderColor&quot;:&quot;#4e73df&quot;,&quot;data&quot;:[&quot;0&quot;,&quot;0&quot;,&quot;0&quot;,&quot;0&quot;,&quot;0&quot;,&quot;0&quot;,&quot;0&quot;]}]},&quot;options&quot;:{&quot;maintainAspectRatio&quot;:true,&quot;legend&quot;:{&quot;display&quot;:true,&quot;reverse&quot;:false,&quot;position&quot;:&quot;bottom&quot;},&quot;title&quot;:{&quot;display&quot;:false},&quot;scales&quot;:{&quot;xAxes&quot;:[{&quot;gridLines&quot;:{&quot;drawTicks&quot;:true,&quot;drawOnChartArea&quot;:true},&quot;ticks&quot;:{&quot;beginAtZero&quot;:true}}],&quot;yAxes&quot;:[{&quot;gridLines&quot;:{&quot;drawTicks&quot;:true},&quot;ticks&quot;:{&quot;beginAtZero&quot;:true}}]}}}"></canvas></div>
         <div class="card">
             <div class="card-body">
-                <h4 class="card-title">Accomplishments&nbsp;<i class="fa fa-trophy"></i></h4><p class="card-text">You have used EUI {{daysStreak}} days in a row!</p><p class="card-text">Your highest Pomodoro streak in a day is {{highestStreakNum}} pomodoros {{highestStreakDate}}</p>
+                <h4 class="card-title">Accomplishments&nbsp;<i class="fa fa-trophy"></i></h4>
+                <hr>
+                <p class="card-text">You have used EUI {{daysStreak}} days in a row!</p>
+                <p class="card-text">Your highest Pomodoro streak in a day is {{highestStreakNum}} pomodoros {{highestStreakDate}}</p>
             </div>
         </div>
     </div>
