--- a/eui_UI/templates/statistic.html
+++ b/eui_UI/templates/statistic.html
@@ -37,7 +37,7 @@
                 <h4 class="card-title">Accomplishments&nbsp;<i class="fa fa-trophy"></i></h4>
                 <hr>
                 <p class="card-text">You have used EUI {{daysStreak}} days in a row!</p>
-                <p class="card-text">Your highest Pomodoro streak in a day is {{highestStreakNum}} pomodoros {{highestStreakDate}}</p>
+                <p class="card-text">Your highest Pomodoro streak in a day is {{highestStreakNum}} pomodoros on {{highestStreakDate}}</p>
             </div>
         </div>
     </div>
